--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+env:
+  IMAGE_OWNER: stevenhuang41
+  IMAGE_REPO: rag-based-notes-helper
+  IMAGE_NAME: rag-app
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -20,12 +25,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+ 
       - name: build docker image
         run: |
           docker build -t \
-          ghcr.io/${{ github.repository }}/rag-app:latest .
+          ghcr.io/$IMAGE_OWNER/$IMAGE_REPO/$IMAGE_NAME:latest .
+          
 
       - name: push docker image
         run: |
-          docker push ghcr.io/${{ github.repository }}/rag-app:latest
+          docker push ghcr.io/$IMAGE_OWNER/$IMAGE_REPO/$IMAGE_NAME:latest
 
