mv ask.py into src/, update dockerfile and entry point

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,6 @@ services:
     volumes:
       - ./data:/app/data
       - ./storage:/app/storage
+      - ~/.cache/huggingface:/root/.cache/huggingface
     stdin_open: true
     tty: true
