--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.scripts]
+rag-app = "rag_notes_helper.cli:main"
