--- a/.dockerignore
+++ b/.dockerignore
@@ -15,6 +15,9 @@ __pycache__/
 # index
 storage/
 
+# cache
+hf_cache/
+
 # tests
 tests/
 
@@ -23,4 +26,3 @@ data/*
 !data/notes_helper.md
 
 .DS_Store
-
