--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,21 +21,18 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
-      - name: log in to github container registry
+      - name: login to ghcr
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-
-      - name: build docker image
-        run: |
-          docker build -t \
-          ghcr.io/$IMAGE_OWNER/$IMAGE_REPO:latest .
-
-
-      - name: push docker image
-        run: |
-          docker push ghcr.io/$IMAGE_OWNER/$IMAGE_REPO:latest
-
+      - name: build and push docker image
+        uses: docker/build-push-action@5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/$IMAGE_OWNER/$IMAGE_REPO:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
