--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: build and push docker image
-        uses: docker/build-push-action@5
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
