--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,6 +21,9 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: login to ghcr
         uses: docker/login-action@v3
         with:
