--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,6 +36,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/$IMAGE_OWNER/$IMAGE_REPO:latest
+          tags: ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_REPO }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
