--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/arm64
           tags: ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_REPO }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
