--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,9 @@ dependencies = [
   "numpy>=1.24",
   "faiss-cpu>=1.7.4",
   "sentence-transformers>=2.6.1",
-  "openai>=1.0",
-  "huggingface_hub",
-  "pytest",
-  "openai",
+  "huggingface-hub>=0.36.0",
+  "openai>=2.14.0",
+  "pytest>=9.0.2",
 ]
 
 [tool.setuptools]
