--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,24 @@
-LLM_PROVIDER=hf     # fill in 'hf' or 'openai' (without '')
+# =======================================================================
+# Uncomment the following LLM provider section
+# =======================================================================
+
+## hugging face
+LLM_PROVIDER=hf
+LLM_MODEL=openai/gpt-oss-120b
+LLM_API_KEY=hf_xxxxxx
+
+## openai
+# LLM_PROVIDER=openai
+# LLM_MODEL=gpt-4o-mini
+# LLM_API_KEY=sk-xxxxxx
+
+## ollama
+# LLM_PROVIDER=ollama
+# LLM_MODEL=llama3.1
+# OLLAMA_BASE_URL: str = "http://localhost:11434"
 
 # =======================================================================
-# check out https://huggingface.co/docs/hub/security-tokens
-# get a huggingface token for free, and paste it in the following line
-# =======================================================================
-HUGGINGFACE_API_KEY=hf_xxxxxx
-HF_MODEL=openai/gpt-oss-120b
 
-
-# =======================================================================
-# if you have a openai api key, paste it in the next line
-# =======================================================================
-OPENAI_API_KEY=sk-xxxxxx
-OPENAI_MODEL=gpt-4o-mini
 
 
 # LLM settings
@@ -26,5 +32,5 @@ CHUNK_OVERLAP=50
 
 # retrieve settings
 TOP_K=5
-MIN_RETRIEVAL_SCORE=0.15
+MIN_RETRIEVAL_SCORE=0.18
 
