--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          mkdir data
+          mkdir -p data
 
       - name: run tests
         run: |
