update runtime with cache, use uv image in docker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,16 @@ dependencies = [
   "tqdm>=4.67.1",
 ]
 
-[project.optional-dependencies]
-dev = [
-  "pytest>=9.0.2",
-]
-
 [project.scripts]
 rag-app = "rag_notes_helper.cli:main"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
+
+[tool.uv]
+package = true
 
 [tool.setuptools]
 package-dir = {"" = "src"}
@@ -34,5 +37,3 @@ where = ["src"]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
 
-[tool.uv]
-package = true
