--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,20 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v4
 
-      - name: setup Python
-        uses: actions/setup-python@v5
+      - name: install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.11"
+          enable-cache: true
+          version: "latest"
 
-      - name: install packages
+      - name: setup python
+        run: uv python install 3.11
+
+      - name: install dev-dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install .
+          uv sync --dev
 
       - name: run tests
         run: |
-          pytest
+          uv run pytest
 
