--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
   "huggingface-hub>=0.36.0",
   "openai>=2.14.0",
   "tqdm>=4.67.1",
-  "google-generativeai>=0.8.6",
+  "google-genai>=1.59.0",
 ]
 
 [project.scripts]
