update .env.example, readme, notes_helper.md, fix ci error

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ LLM_MODEL=openai/gpt-oss-120b
 LLM_API_KEY=hf_xxxxxx
 
 
+## Option 2: gemini (remote)
+# LLM_PROVIDER=gemini
+# LLM_MODEL=gemini-2.0-flash
+# LLM_API_KEY=AIxxxxxx
+
+
 ## Option 2: openai (remote)
 # LLM_PROVIDER=openai
 # LLM_MODEL=gpt-4o-mini
