--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "huggingface-hub>=0.36.0",
   "openai>=2.14.0",
   "tqdm>=4.67.1",
+  "pymupdf>=1.26.7",
 ]
 
 [project.scripts]
